Fix: Add extra margin to login buttons
Summary:
  - Added margin-bottom to group of login buttons

Motivation:
  - Separating buttons from the bottom of content box

--- a/item_catalogue/item_catalogue/static/styles/style.css
+++ b/item_catalogue/item_catalogue/static/styles/style.css
@@ -35,7 +35,7 @@ header .contents #nav #user {text-align: right; width: 40%;}
 main .contents .box {background-color: white; border-style: solid; border-width: 1px; border-color: #AFAFAF; padding: 0 0.83em; position: relative;}
 main .contents .box .header .options {left: 0; margin: 0.4em 0; position: absolute; text-align: right; top: 0; width: 100%; z-index: 9999;}
 main .contents .box .header .options .wrapper {padding: 0 0.83em;}
-main .contents .box .login-buttons{max-width: 15.1em;}
+main .contents .box .login-buttons{max-width: 15.1em; margin-bottom: 1em;}
 /*Main - Header*/
 
 /*Main - Menu*/
